--- a/package.json
+++ b/package.json
@@ -2,28 +2,33 @@
   "name": "typescript-express-server",
   "version": "1.0.0",
   "description": "TypeScript Express Server",
-  "main": "dist/index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "prestart": "npm run build",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/app.ts",
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "@deepgram/sdk": "^3.11.2",
+    "express": "^4.21.2",
+    "openai": "^4.87.3",
+    "twilio": "^5.5.0",
+    "ws": "^8.18.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "@types/node": "^22.13.10",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.2",
     "@types/jest": "^29.5.11",
+    "@types/node": "^22.13.10",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.18.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.6"
+    "ts-jest": "^29.2.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
   }
 }
