--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.11",
     "@types/node": "^22.15.30",
+    "@types/node-fetch": "^2.6.12",
     "@types/supertest": "^6.0.3",
     "@types/ws": "^8.18.1",
     "jest": "^29.7.0",
