--- a/.github/workflows/test-code.yml
+++ b/.github/workflows/test-code.yml
@@ -1,5 +1,8 @@
 name: Test code
 
+permissions:
+  contents: write
+
 on:
   push:
     branches: [main]
@@ -40,3 +43,18 @@ jobs:
         with:
           name: coverage-report
           path: coverage
+
+      - name: Publish coverage summary for badge
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main' && github.actor != 'github-actions[bot]'
+        run: |
+          mkdir -p badge-data
+          cp coverage/coverage-summary.json badge-data/coverage-summary.json
+          if git diff --quiet -- badge-data/coverage-summary.json; then
+            echo "Coverage summary unchanged"
+            exit 0
+          fi
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add badge-data/coverage-summary.json
+          git commit -m "chore(ci): update coverage summary"
+          git push
